--- a/assets/css/gridstyle2.css
+++ b/assets/css/gridstyle2.css
@@ -4,7 +4,8 @@
 }
 
 .infoLink {
-    bottom:10px;
+    top:15%;
+    position:relative;
 }
 
 #currentPage {
@@ -23,7 +24,7 @@
 
 
 a:hover {
-    background-color: #111;
+    /* background-color: #111; */
     -webkit-animation-name: example; /* Safari 4.0 - 8.0 */
     -webkit-animation-duration: 1s; /* Safari 4.0 - 8.0 */
     animation-name: example;
@@ -33,11 +34,16 @@ a:hover {
 
 
 
+.btn-group-lg>.btn, .btn-lg {
+    margin:5px;
+}
 
 
-
-
-
+.projectPic {
+    /* display:inline; */
+    width:150px;
+    height:150px;
+}
 
 
 
@@ -96,7 +102,10 @@ width:30%;z-index:1; box-shadow: none;}
   
     /* ================================================= */
 
-
+#portrait {
+    width:35%;
+    height:auto;
+}
 
 
 
@@ -116,7 +125,20 @@ width:30%;z-index:1; box-shadow: none;}
     }
 
 
-
+.projectName {
+    /* position:absolute; */
+    border-radius:10px;
+    bottom:20px;
+    width:100%;
+    text-align:center;
+    background-color:forestgreen;
+    color:white;
+    padding:20px auto 20px auto;
+    padding-top: 20px;
+    padding-left: auto;
+    padding-right: auto;
+    padding-bottom: 20px; 
+}
 
 
 
@@ -173,8 +195,8 @@ width:30%;z-index:1; box-shadow: none;}
 
 #content {
     font-family: sans-serif;
-    max-width:960px;
-    background-color:white;
+    max-width:75%;
+    background-color:rgba(255,255,255,0.8);
     min-height:500px;
     height:auto;
     /* text-align:center; */
@@ -196,7 +218,7 @@ body {
  #aboutme {
      font-family: serif;
     /* float:left; */
-    color:steelblue;
+    color:forestgreen;
     font-size:36px;
     padding-top: 40px;
     padding-bottom: 10px;
@@ -224,8 +246,8 @@ body {
   }
 
   .paragraphtext {
-      color:gray;
-      font-size:16px;
+      color:darkslategray;
+      font-size:25px;
       line-height:25px;
       text-indent:30px;
   }
@@ -361,7 +383,7 @@ form {
 #projectHeading {
     font-family: serif;
     /* float: left; */
-    color: steelblue;
+    color: forestgreen;
     font-size: 36px;
     /* padding-top: 40px; */
     /* padding-bottom: 10px; */
@@ -436,29 +458,3 @@ h2 span {
 
 
 
-
-
-
-
-/* 
-a {
-    color:gray;
-    font-size:20px;
-    text-decoration:none;
-}
-
-a:active {
-    background-color:purple;
-}
-
-a:hover {
-    background-color:orange;
-    /* font-weight: bolder; */
-}
-a:focus {
-    background-color:teal;
-    /* font-weight: bolder; */
-} */
-
-/* Content Div contains everything centered
-Float can be used to put things to the left or right of the centered area */
