--- a/assets/css/gridstyle2.css
+++ b/assets/css/gridstyle2.css
@@ -130,6 +130,7 @@ width:30%;z-index:1; box-shadow: none;}
     border-radius:10px;
     bottom:20px;
     width:100%;
+    font-size:26px;
     text-align:center;
     background-color:forestgreen;
     color:white;
