added a little border

--- a/assets/css/gridstyle2.css
+++ b/assets/css/gridstyle2.css
@@ -43,6 +43,8 @@ a:hover {
     /* display:inline; */
     width:150px;
     height:150px;
+    border: 10px solid silver;
+    border-radius: 5px;
 }
 
 
